feat/fixed all e2e errors
